--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.14.0",
     "@tailwindcss/vite": "^4.1.8",
     "lucide": "^0.513.0",
+    "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
