--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "react": "^19.1.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
