--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "firebase": "^11.9.1",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lucide": "^0.513.0",
     "lucide-react": "^0.513.0",
